--- a/FrontendWebService/src/index.html
+++ b/FrontendWebService/src/index.html
@@ -6,8 +6,16 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"> -->
-  <link href="https://cdn.jsdelivr.net/combine/npm/bootswatch@5.0.1/dist/darkly/bootstrap.min.css,npm/bootswatch@5.0.1/dist/darkly/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet" type="text/css">
+  <link href="fonts/icomoon/style.css" rel="stylesheet" type="text/html">
+  <link href="css/owl.carousel.min.css" rel="stylesheet" type="text/html">
+  <link href="css/owl.theme.default.min.css" rel="stylesheet" type="text/html">
+  <link href="fonts/flaticon/font/flaticon.css" rel="stylesheet" type="text/html">
+  <link href="../css/aos.css" rel="stylesheet" type="text/html">
+  <link href="styles.css" rel="stylesheet" type="text/html">
+ 
+  <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"> -->
+  <!--<link href="https://cdn.jsdelivr.net/combine/npm/bootswatch@5.0.1/dist/darkly/bootstrap.min.css,npm/bootswatch@5.0.1/dist/darkly/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">-->
 </head>
 <body>
   <app-root></app-root>
